src/objects/SBQQ__Theme__c/fields/SBQQ__InputOutlineColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__InputOutlineColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Outline color of input forms on focus</inlineHelpText>
    <label>Input Outline Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>