src/objects/SBQQ__Theme__c/fields/SBQQ__SelectBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SelectBackgroundColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Background color of drop-down menus</inlineHelpText>
    <label>Picklist Background Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>