src/objects/SBQQ__Theme__c/fields/SBQQ__StandardButtonBorderRadius__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__StandardButtonBorderRadius__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Border radius of standard buttons (Click the icon for additional information)</inlineHelpText>
    <label>Standard Button Border Radius</label>
    <length>10</length>
    <type>Text</type>
</CustomField>