src/objects/SBQQ__Theme__c/fields/SBQQ__StandardButtonFontSize__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__StandardButtonFontSize__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Font size of standard buttons</inlineHelpText>
    <label>Standard Button Font Size</label>
    <length>23</length>
    <type>Text</type>
</CustomField>