src/objects/SBQQ__Theme__c/fields/SBQQ__StandardButtonPaddingBottom__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__StandardButtonPaddingBottom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom padding of standard buttons</inlineHelpText>
    <label>Standard Button Bottom Padding</label>
    <length>23</length>
    <type>Text</type>
</CustomField>