src/objects/SBQQ__Theme__c/fields/SBQQ__StandardButtonPaddingLeft__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__StandardButtonPaddingLeft__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Left padding of standard buttons</inlineHelpText>
    <label>Standard Button Left Padding</label>
    <length>23</length>
    <type>Text</type>
</CustomField>