src/objects/SBQQ__Theme__c/fields/SBQQ__StandardButtonPaddingRight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__StandardButtonPaddingRight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Right padding of standard buttons</inlineHelpText>
    <label>Standard Button Right Padding</label>
    <length>23</length>
    <type>Text</type>
</CustomField>