src/objects/SBQQ__Theme__c/fields/SBQQ__StandardButtonPaddingTop__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__StandardButtonPaddingTop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Top padding of standard buttons</inlineHelpText>
    <label>Standard Button Top Padding</label>
    <length>23</length>
    <type>Text</type>
</CustomField>