src/objects/SBQQ__Theme__c/fields/SBQQ__TabColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TabColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Color of tabs</inlineHelpText>
    <label>Tab Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>