src/objects/SBQQ__Theme__c/fields/SBQQ__TabHoverColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TabHoverColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Hover color of tabs</inlineHelpText>
    <label>Tab Hover Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>