src/objects/SBQQ__Theme__c/fields/SBQQ__TableCellPaddingBottom__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableCellPaddingBottom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom padding of table cell</inlineHelpText>
    <label>Table Cell Bottom Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>