src/objects/SBQQ__Theme__c/fields/SBQQ__TableCellPaddingLeft__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableCellPaddingLeft__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Left padding of table cell</inlineHelpText>
    <label>Table Cell Left Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>