src/objects/SBQQ__Theme__c/fields/SBQQ__TableCellPaddingRight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableCellPaddingRight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Right padding of table cell</inlineHelpText>
    <label>Table Cell Right Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>