src/objects/SBQQ__Theme__c/fields/SBQQ__TableCellPaddingTop__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableCellPaddingTop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Top padding of table cell</inlineHelpText>
    <label>Table Cell Top Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>