src/objects/SBQQ__Theme__c/fields/SBQQ__TableGroupedRowBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableGroupedRowBackgroundColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Background color of collapsible rows in a table</inlineHelpText>
    <label>Grouped Row Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>