src/objects/SBQQ__Theme__c/fields/SBQQ__TableGroupedRowBorderBottomColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableGroupedRowBorderBottomColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom border color of collapsible rows in a table</inlineHelpText>
    <label>Grouped Row Border Bottom Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>