src/objects/SBQQ__Theme__c/fields/SBQQ__TableGroupedRowBorderBottomWidth__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableGroupedRowBorderBottomWidth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom border width of collapsible rows in a table</inlineHelpText>
    <label>Grouped Row Border Bottom Width</label>
    <length>10</length>
    <type>Text</type>
</CustomField>