src/objects/SBQQ__Theme__c/fields/SBQQ__TableGroupedRowLineHeight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableGroupedRowLineHeight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Line height of collapsible rows in a table</inlineHelpText>
    <label>Grouped Row Line Height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>