src/objects/SBQQ__Theme__c/fields/SBQQ__TableGroupedRowPaddingBottom__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableGroupedRowPaddingBottom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom padding of collapsible rows in a table</inlineHelpText>
    <label>Grouped Row Padding Bottom</label>
    <length>10</length>
    <type>Text</type>
</CustomField>