src/objects/SBQQ__Theme__c/fields/SBQQ__TableGroupedRowPaddingTop__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableGroupedRowPaddingTop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Top padding of collapsible rows in a table</inlineHelpText>
    <label>Grouped Row Padding Top</label>
    <length>10</length>
    <type>Text</type>
</CustomField>