src/objects/SBQQ__Theme__c/fields/SBQQ__TableHeaderBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableHeaderBackgroundColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Background color of table header</inlineHelpText>
    <label>Table Header Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>