src/objects/SBQQ__Theme__c/fields/SBQQ__TableHeaderBorderBottomColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableHeaderBorderBottomColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom border color of table header</inlineHelpText>
    <label>Table Header Border Bottom Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>