src/objects/SBQQ__Theme__c/fields/SBQQ__TableHeaderBorderBottomWidth__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableHeaderBorderBottomWidth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom border width of table header</inlineHelpText>
    <label>Table Header Border Bottom Width</label>
    <length>10</length>
    <type>Text</type>
</CustomField>