src/objects/SBQQ__Theme__c/fields/SBQQ__TableHeaderCellHeight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableHeaderCellHeight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Height of table header cell</inlineHelpText>
    <label>Table Header Cell Height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>