src/objects/SBQQ__Theme__c/fields/SBQQ__TableHeaderFontColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableHeaderFontColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Font color of table header</inlineHelpText>
    <label>Table Header Font Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>