src/objects/SBQQ__Theme__c/fields/SBQQ__TableHeaderFontSize__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableHeaderFontSize__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Font size of table header</inlineHelpText>
    <label>Table Header Font Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>