src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowBackgroundColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Background color of rows in a table</inlineHelpText>
    <label>Table Row Background Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>