src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowBorderBottomColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowBorderBottomColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom border color of rows in a table</inlineHelpText>
    <label>Table Row Border Bottom Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>