src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowBorderBottomWidth__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowBorderBottomWidth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom border width of rows in a table</inlineHelpText>
    <label>Table Row Border Bottom Width</label>
    <length>10</length>
    <type>Text</type>
</CustomField>