src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowFontColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowFontColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Font color of rows in a table</inlineHelpText>
    <label>Table Row Font Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>