src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowFontSize__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowFontSize__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Font size of rows in a table</inlineHelpText>
    <label>Table Row Font Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>