src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowHoverColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowHoverColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Hover color of rows in a table</inlineHelpText>
    <label>Table Row Hover Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>