src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowLineHeight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowLineHeight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Height of rows in a table (Click the icon for additional information)</inlineHelpText>
    <label>Table Row Line Height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>