src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowPaddingBottom__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowPaddingBottom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom padding of rows in a table</inlineHelpText>
    <label>Table Row Padding Bottom</label>
    <length>10</length>
    <type>Text</type>
</CustomField>