src/objects/SBQQ__Theme__c/fields/SBQQ__TableRowPaddingTop__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TableRowPaddingTop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Top padding of rows in a table</inlineHelpText>
    <label>Table Row Padding Top</label>
    <length>10</length>
    <type>Text</type>
</CustomField>