src/objects/SBQQ__Theme__c/fields/SBQQ__TabSelectedColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TabSelectedColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Color of selected tabs</inlineHelpText>
    <label>Tab Selected Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>