src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxBackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxBackgroundColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Background color of textboxes</inlineHelpText>
    <label>Textbox Background Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>