src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxBorderColor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxBorderColor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Border color of textboxes</inlineHelpText>
    <label>Textbox Border Color</label>
    <length>23</length>
    <type>Text</type>
</CustomField>