src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxBorderRadius__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxBorderRadius__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Border radius of textboxes</inlineHelpText>
    <label>Textbox Border Radius</label>
    <length>10</length>
    <type>Text</type>
</CustomField>