src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxBorderWidth__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxBorderWidth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Border width of textboxes</inlineHelpText>
    <label>Textbox Border Width</label>
    <length>10</length>
    <type>Text</type>
</CustomField>