src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxHeight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxHeight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Height of textboxes</inlineHelpText>
    <label>Textbox Border Height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>