src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxPaddingBottom__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxPaddingBottom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bottom padding of textboxes</inlineHelpText>
    <label>Textbox Bottom Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>