src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxPaddingLeft__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxPaddingLeft__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Left padding of textboxes</inlineHelpText>
    <label>Textbox Left Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>