src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxPaddingRight__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxPaddingRight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Right padding of textboxes</inlineHelpText>
    <label>Textbox Right Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>