src/objects/SBQQ__Theme__c/fields/SBQQ__TextboxPaddingTop__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TextboxPaddingTop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Top padding of textboxes</inlineHelpText>
    <label>Textbox Top Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>