src/objects/SBQQ__Theme__c/fields/SBQQ__UI2DocumentId__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UI2DocumentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>